# scoreboard

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml  scores.db
certs/accounts/acme-v02.api.letsencrypt.org/directory/f5e893e5540d4490fdda9df5e2af76fa/: meta.json  private_key.json  regr.json
