[project]
name = "scoreboard"
version = "0.1.0"
description = "For the competitive couple, this gives you a place to store and track all those pickleball, cornhole or other games you'd like to brag about!"
authors = [
    {name = "dallin_main",email = "dallincraven@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "streamlit>=1.50.0,<2.0.0",
    "seaborn>=0.13.2,<0.14.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
